<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.main.fragments.acount.RecoverPasswordDialog">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/recuperar_clave"
        android:background="@drawable/img_background_title"
        android:textColor="@color/white"
        app:textAllCaps="true"
        style="@style/title"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        style="@style/subtitle"
        android:text="@string/ingresa_correo_electronico"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/textInputLayout_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            style="@style/editText_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        style="@style/buton_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_clave" />

</androidx.appcompat.widget.LinearLayoutCompat>