<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbarThumbVertical="@drawable/shape_scrollbar"
    android:scrollbars="vertical"
    tools:context=".ui.main.fragments.contact.ContactDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/img_background_title"
                android:text="@string/contacto"
                android:textColor="@color/white"
                app:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_acount" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/necesitas_ayuda" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/textInputLayout_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    style="@style/editText_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/textInputLayout_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/editText_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_commentary"
                style="@style/textInputLayout_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comentario">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_commentary"
                    style="@style/editText_app"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="start" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/sw_legal"
                    style="@style/switch_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/materialTextView2"
                    app:layout_constraintEnd_toStartOf="@+id/materialTextView1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/materialTextView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView"
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/estoy_de_acuerdo_con"
                    app:layout_constraintEnd_toEndOf="@+id/materialTextView1"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView1"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView1"
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/terminos_y_condiciones"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView2"
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/aviso_de_privacidad"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/materialTextView1"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView1"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_in"
                style="@style/buton_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enviar" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/transparent2"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:indeterminate="true"
                app:hideAnimationBehavior="outward"
                app:indicatorColor="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:showAnimationBehavior="inward"
                app:trackColor="?attr/colorSecondary"
                app:trackThickness="5dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

